--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,8 @@
 body{
 	font-family: Arial, sans-serif;
+	background-image: url(../img/gato-cocinero.png);
+	background-attachment:fixed;
+	background-size:auto;
 	margin: 0;
 	padding: 0;
 }
